objects/ScCollection_Contract_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Loan_ID__c</fullName>
        <formula>VALUE(SUBSTITUTE(ScCollection_Contract_Name__c, &quot;_0&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Arrears_Amount__c</fullName>
        <formula>ScCollection_Queue_Contract__r.ScCollection_Arrears__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrears Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Assigned_By__c</fullName>
        <formula>If(LEFT(ScCollection_Queue_Contract__r.LastModifiedBy.Id,15) = &apos;00528000003PExI&apos;, &apos;ICM&apos;, ScCollection_Queue_Contract__r.LastModifiedBy.FirstName &amp; &apos; &apos; &amp;  ScCollection_Queue_Contract__r.LastModifiedBy.LastName)</formula>
        <label>Assigned By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Assigned_Date__c</fullName>
        <formula>ScCollection_Queue_Contract__r.collect__Follow_Up_Date__c</formula>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Assignee__c</fullName>
        <formula>ScCollection_Queue_Contract__r.collect__User__r.FirstName &amp; &apos; &apos; &amp; ScCollection_Queue_Contract__r.collect__User__r.LastName</formula>
        <label>Agent Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Balance_Amount__c</fullName>
        <formula>ScCollection_Queue_Contract__r.ScCollection_Balance_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Bucket__c</fullName>
        <formula>IF(ScCollection_Contract__c &lt;&gt; Null,
TEXT(ScCollection_Contract__r.ScCollection_Bucket__c),
&apos;&apos;)</formula>
        <label>Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Contract Allocation</relationshipLabel>
        <relationshipName>Contract_Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract_Name__c</fullName>
        <formula>If(ScCollection_Contract__c &lt;&gt; NULL, ScCollection_Contract__r.Name, IF(ScCollection_CL_Contract__c &lt;&gt; NULL, ScCollection_CL_Contract__r.Name, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract_Split_Number__c</fullName>
        <formula>IF(ScCollection_Contract__c &lt;&gt; Null, 
TEXT(ScCollection_Contract__r.ScCollection_Contract_Split_Number__c), 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Split Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://ap2.salesforce.com/&quot;&amp;If(ScCollection_Contract__c &lt;&gt; NULL,  ScCollection_Contract__r.Id, IF(ScCollection_CL_Contract__c &lt;&gt; NULL, ScCollection_CL_Contract__r.Id, &apos;&apos;)), ScCollection_Contract_Name__c, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Contract Allocation</relationshipLabel>
        <relationshipName>Contract_Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Country_Code__c</fullName>
        <formula>IF(ScCollection_Contract__c &lt;&gt; Null, 
ScCollection_Contract__r.ScCollection_Country_Code__c, 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ScCollection_Interaction_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction Log</label>
        <referenceTo>collect__Interaction_Log__c</referenceTo>
        <relationshipLabel>Contract Allocation</relationshipLabel>
        <relationshipName>Contract_Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Mortgage_Funding__c</fullName>
        <formula>IF(ScCollection_Contract__c &lt;&gt; Null, 
ScCollection_Contract__r.ScCollection_Mortgage_Funding__c, 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mortgage Funding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Old_Bucket__c</fullName>
        <formula>IF(ScCollection_Contract__c &lt;&gt; Null, 
TEXT(ScCollection_Contract__r.ScCollection_OldBucket__c), 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Queue_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Queue Contract</label>
        <referenceTo>collect__Queue_Contract__c</referenceTo>
        <relationshipLabel>Contract Allocation</relationshipLabel>
        <relationshipName>Contract_Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Queue_Name__c</fullName>
        <formula>ScCollection_Queue_Contract__r.collect__Queue__r.Name</formula>
        <label>Queue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Review_Date__c</fullName>
        <formula>IF(ScCollection_Interaction_Log__c &lt;&gt; Null,
DATEVALUE(ScCollection_Interaction_Log__r.collect__Follow_Up_Date_Time__c),
ScCollection_Queue_Contract__r.collect__Follow_Up_Date__c)</formula>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Rolled_up_down__c</fullName>
        <formula>IF(ScCollection_Contract__c &lt;&gt; Null, 
ScCollection_Contract__r.ScCollection_Rolled_Up_Down__c, 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rolled Up/Down</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Source_System__c</fullName>
        <formula>IF(ScCollection_Contract__c &lt;&gt; Null,
ScCollection_Contract__r.collect__Source_System__r.Name,
If(ScCollection_CL_Contract__c &lt;&gt; Null,
&apos;Cl Loan&apos;,
&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Untouched_Since_Duration__c</fullName>
        <formula>TEXT(TODAY() - ScCollection_Untouched_Since__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Untouched Since(Duration)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Untouched_Since__c</fullName>
        <formula>IF(ScCollection_Interaction_Log__c &lt;&gt; NULL, DATEVALUE(ScCollection_Interaction_Log__r.CreatedDate),  ScCollection_Queue_Contract__r.collect__Follow_Up_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Untouched Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Untouched_Since_Bucket__c</fullName>
        <formula>IF(AND(VALUE(ScCollection_Untouched_Since_Duration__c) &gt; 0,  VALUE(ScCollection_Untouched_Since_Duration__c) &lt;= 10),
&apos;0-10&apos;,
IF(AND(VALUE(ScCollection_Untouched_Since_Duration__c) &gt; 10,  VALUE(ScCollection_Untouched_Since_Duration__c) &lt;= 20),
&apos;11-20&apos;,
IF(AND(VALUE(ScCollection_Untouched_Since_Duration__c) &gt; 20,  VALUE(ScCollection_Untouched_Since_Duration__c) &lt;= 30),
&apos;21-30&apos;,
&apos;30 +&apos;)))</formula>
        <label>Untouched Since Bucket</label>
        <type>Text</type>
    </fields>
    <label>Contract Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ScCollection_Contract__c</columns>
        <columns>ScCollection_CL_Contract__c</columns>
        <columns>ScCollection_Queue_Contract__c</columns>
        <columns>ScCollection_Interaction_Log__c</columns>
        <columns>ScCollection_Review_Date__c</columns>
        <columns>ScCollection_Assignee__c</columns>
        <columns>ScCollection_Queue_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>Contract Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>